--- a/Advocacy.Software.Pages/PageRegisterCustomer.xaml
+++ b/Advocacy.Software.Pages/PageRegisterCustomer.xaml
@@ -54,7 +54,7 @@
         <Label Content="Número de registro: " FontSize="15" Margin="10,528,584,0" Height="30" Grid.Row="1" VerticalAlignment="Top"/>
         <TextBox x:Name="TextBoxGuidId" IsReadOnly="True" TextWrapping="Wrap" Height="26" FontSize="15" Margin="223,530,10,0" Grid.Row="1" VerticalAlignment="Top"/>
 
-        <Border Grid.Row="2" Background="Black"></Border>
+        <Border Grid.Row="2" Background="DarkGray"></Border>
 
         <Button x:Name="ButtonNew" Content="Novo" Grid.Row="2" HorizontalAlignment="Left" Width="200" FontSize="20" Margin="10, 0, 0, 0" Background="Lavender" Click="ButtonNew_Click" />
         <Button x:Name="ButtonSave" Content="Salvar" Grid.Row="2" HorizontalAlignment="Center" Width="200" FontSize="20" Background="Lavender" Click="ButtonSave_Click_1" />
