--- a/Advocacy.Software.Pages/PageGenerateAttorney.xaml
+++ b/Advocacy.Software.Pages/PageGenerateAttorney.xaml
@@ -24,7 +24,7 @@
         <TextBox x:Name="TextBoxSpecificPowers" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="25" Width="390" Margin="370,183,40,0"/>
 
 
-        <Button Grid.Row="1" x:Name="ButtonGenerateAttorney" Content="Gerar Procuração" FontSize="35" VerticalAlignment="Center" HorizontalAlignment="Center" Width="400" Foreground="Lavender" Background="Black" Click="ButtonGenerateAttorney_Click"></Button>
+        <Button Grid.Row="1" x:Name="ButtonGenerateAttorney" Content="Gerar Procuração" FontSize="35" VerticalAlignment="Center" HorizontalAlignment="Center" Width="400" Background="DarkGray" Click="ButtonGenerateAttorney_Click"/>
         <TextBox x:Name="TextBoxLawyer" IsReadOnly="True" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="25" Width="390" Margin="371,100,39,0" />
     </Grid>
 </Page>
