--- a/Advocacy.Software.Pages/PageRegisterLawyer.xaml
+++ b/Advocacy.Software.Pages/PageRegisterLawyer.xaml
@@ -7,56 +7,38 @@
       mc:Ignorable="d" d:DesignWidth="800"
       Title="PageRegisterLawyer" Background="Lavender" Loaded="PageRegisterLawyers_Loaded">
 
-    <Grid>
+    <Grid Height="800">
         <Grid.RowDefinitions>
             <RowDefinition Height="46"></RowDefinition>
             <RowDefinition></RowDefinition>
         </Grid.RowDefinitions>
-        <Border Background="Black" BorderBrush="Black" BorderThickness="1">
+        <Border Background="Black" BorderBrush="Black" BorderThickness="1" VerticalAlignment="Top">
             <Label Foreground="Lavender"  Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="25" FontWeight="Bold">Cadastro de advogados</Label>
         </Border>
         <Label Content="Nome: " FontSize="15" Margin="12,11,613,54" Height="30" Grid.Row="1" VerticalAlignment="Top"/>
-        <TextBox x:Name="TextBoxName" TabIndex="0" Height="25" FontSize="15" Margin="223,11,10,0" Grid.Row="1" VerticalAlignment="Top" />
-        <Label Content="Nacionalidade: " FontSize="15" Margin="12,38,610,0" Height="30" Grid.Row="1" VerticalAlignment="Top"/>
-        <TextBox x:Name="TextBoxNationality" TextWrapping="Wrap" Height="25" FontSize="15" Margin="223,41,10,0" Grid.Row="1" VerticalAlignment="Top"/>
-        <Label Content="Estado civil: " FontSize="15" Margin="12,68,624,0" Height="30" Grid.Row="1" VerticalAlignment="Top"/>
-        <TextBox x:Name="TextBoxCivilStatus" TextWrapping="Wrap" Height="25" FontSize="15" Margin="223,71,378,0" Grid.Row="1" VerticalAlignment="Top"/>
-        <Label Content="Profissão: " FontSize="15" Margin="12,98,624,0" Height="30" Grid.Row="1" VerticalAlignment="Top"/>
-        <TextBox x:Name="TextBoxProfession" TextWrapping="Wrap" Height="25" FontSize="15" Margin="223,101,378,0" Grid.Row="1" VerticalAlignment="Top"/>
-        <Label Content="Número da OAB: " FontSize="15" Margin="12,128,582,0" Height="30" Grid.Row="1" VerticalAlignment="Top"/>
-        <TextBox x:Name="TextBoxOabNumber" TextWrapping="Wrap" Height="25" FontSize="15" Margin="223,131,378,0" Grid.Row="1" VerticalAlignment="Top"/>
-        <Label Content="UF da OAB: " FontSize="15" Margin="12,159,582,0" Height="30" Grid.Row="1" VerticalAlignment="Top"/>
-        <ComboBox x:Name="ComboBoxUfOab" Grid.Row="1" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="223,162,0,0" Height="25" FontSize="15" Width="199" ></ComboBox>
-        <Label Content="Email: " FontSize="15" Margin="12,189,610,0" Height="30" Grid.Row="1" VerticalAlignment="Top"/>
-        <TextBox x:Name="TextBoxEmail" TextWrapping="Wrap" Height="25" FontSize="15" Margin="223,192,10,0" Grid.Row="1" VerticalAlignment="Top"/>
-        <Label Content="UF: " FontSize="15" Margin="12,219,582,0" Height="30" Grid.Row="1" VerticalAlignment="Top"/>
-        <ComboBox x:Name="ComboBoxUf" Grid.Row="1" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="223,222,0,0" FontSize="15" Height="25" Width="199" SelectionChanged="ComboBoxUf_SelectionChanged"/>
-        <Label Content="Cidade: " FontSize="15" Margin="10,250,708,0" Height="30" Grid.Row="1" VerticalAlignment="Top"/>
-        <ComboBox x:Name="ComboBoxCities" Grid.Row="1" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="223,252,0,0" FontSize="15" Height="25" Width="567" />
-        <Label Content="Endereço: " FontSize="15" Margin="9,280,613,0" Height="30" Grid.Row="1" VerticalAlignment="Top"/>
-        <TextBox x:Name="TextBoxAddress" TextWrapping="Wrap" Height="26" FontSize="15" Margin="223,283,10,0" Grid.Row="1" VerticalAlignment="Top"/>
-        <Label Content="Número: " FontSize="15" Margin="10,313,584,0" Height="30" Grid.Row="1" VerticalAlignment="Top"/>
-        <TextBox x:Name="TextBoxNumber" TextWrapping="Wrap" Height="26" FontSize="15" Margin="223,315,378,0" Grid.Row="1" VerticalAlignment="Top"/>
-        <Label Content="Bairro: " FontSize="15" Margin="12,344,610,0" Height="30" Grid.Row="1" VerticalAlignment="Top"/>
-        <TextBox x:Name="TextBoxNeighbourhood" TextWrapping="Wrap" Height="26" FontSize="15" Margin="223,346,10,0" Grid.Row="1" VerticalAlignment="Top"/>
-        <Label Content="Complemento: " FontSize="15" Margin="12,374,610,0" Height="30" Grid.Row="1" VerticalAlignment="Top"/>
-        <TextBox x:Name="TextBoxComplement" TextWrapping="Wrap" Height="26" FontSize="15" Margin="223,377,10,0" Grid.Row="1" VerticalAlignment="Top"/>
-        <Label Content="CEP: " FontSize="15" Margin="12,406,582,0" Height="30" Grid.Row="1" VerticalAlignment="Top"/>
-        <TextBox x:Name="TextBoxZipCode" TextWrapping="Wrap" Height="26" FontSize="15" Margin="223,408,378,0" Grid.Row="1" VerticalAlignment="Top"/>
-        <Label Content="Telefone: " FontSize="15" Margin="12,437,582,0" Height="30" Grid.Row="1" VerticalAlignment="Top"/>
-        <TextBox x:Name="TextBoxPhoneNumber" TextWrapping="Wrap" Height="26" FontSize="15" Margin="223,439,378,0" Grid.Row="1" VerticalAlignment="Top"/>
-        <Label Content="Data de cadastro: " FontSize="15" Margin="12,470,582,0" Height="30" Grid.Row="1" VerticalAlignment="Top"/>
-        <TextBox x:Name="TextBoxRegisterDate" IsReadOnly="True" TextWrapping="Wrap" Height="26" FontSize="15" Margin="223,470,378,0" Grid.Row="1" VerticalAlignment="Top"/>
-        <Label Content="Última atualização: " FontSize="15" Margin="12,501,582,0" Height="30" Grid.Row="1" VerticalAlignment="Top"/>
-        <TextBox x:Name="TextBoxLastUpdate" IsReadOnly="True" TextWrapping="Wrap" Height="26" FontSize="15" Margin="223,501,378,0" Grid.Row="1" VerticalAlignment="Top"/>
-        <Label Content="Número de registro: " FontSize="15" Margin="10,531,584,0" Height="30" Grid.Row="1" VerticalAlignment="Top"/>
-        <TextBox x:Name="TextBoxGuidId" IsReadOnly="True" TextWrapping="Wrap" Height="26" FontSize="15" Margin="223,532,10,0" Grid.Row="1" VerticalAlignment="Top"/>
+        <TextBox x:Name="TextBoxName" TabIndex="0" Height="25" FontSize="15" Margin="223,11,378,0" Grid.Row="1" VerticalAlignment="Top" />
+        <Label Content="Profissão: " FontSize="15" Margin="12,38,624,0" Height="28" Grid.Row="1" VerticalAlignment="Top"/>
+        <TextBox x:Name="TextBoxProfession" TextWrapping="Wrap" Height="25" FontSize="15" Margin="223,41,378,0" Grid.Row="1" VerticalAlignment="Top"/>
+        <Label Content="Número da OAB: " FontSize="15" Margin="12,68,582,0" Height="30" Grid.Row="1" VerticalAlignment="Top"/>
+        <TextBox x:Name="TextBoxOabNumber" TextWrapping="Wrap" Height="25" FontSize="15" Margin="223,71,378,0" Grid.Row="1" VerticalAlignment="Top"/>
+        <Label Content="UF da OAB: " FontSize="15" Margin="12,99,582,0" Height="30" Grid.Row="1" VerticalAlignment="Top"/>
+        <ComboBox x:Name="ComboBoxUfOab" Grid.Row="1" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="223,102,0,0" Height="25" FontSize="15" Width="199" ></ComboBox>
+        <Label Content="UF: " FontSize="15" Margin="12,129,582,0" Height="30" Grid.Row="1" VerticalAlignment="Top"/>
+        <ComboBox x:Name="ComboBoxUf" Grid.Row="1" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="223,132,0,0" FontSize="15" Height="25" Width="199" SelectionChanged="ComboBoxUf_SelectionChanged"/>
+        <Label Content="Cidade: " FontSize="15" Margin="10,160,708,0" Height="30" Grid.Row="1" VerticalAlignment="Top"/>
+        <ComboBox x:Name="ComboBoxCities" Grid.Row="1" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="223,162,0,0" FontSize="15" Height="25" Width="199" />
+        <Label Content="Data de cadastro: " FontSize="15" Margin="10,190,584,0" Height="30" Grid.Row="1" VerticalAlignment="Top"/>
+        <TextBox x:Name="TextBoxRegisterDate" IsReadOnly="True" TextWrapping="Wrap" Height="26" FontSize="15" Margin="223,192,378,0" Grid.Row="1" VerticalAlignment="Top"/>
+        <Label Content="Última atualização: " FontSize="15" Margin="10,219,584,0" Height="30" Grid.Row="1" VerticalAlignment="Top"/>
+        <TextBox x:Name="TextBoxLastUpdate" IsReadOnly="True" TextWrapping="Wrap" Height="26" FontSize="15" Margin="223,223,378,0" Grid.Row="1" VerticalAlignment="Top"/>
+        <Label Content="Número de registro: " FontSize="15" Margin="12,249,582,0" Height="30" Grid.Row="1" VerticalAlignment="Top"/>
+        <TextBox x:Name="TextBoxGuidId" IsReadOnly="True" TextWrapping="Wrap" Height="26" FontSize="15" Margin="223,254,378,0" Grid.Row="1" VerticalAlignment="Top"/>
 
-        <Border Grid.Row="1" Background="DarkGray" Height="30" VerticalAlignment="Bottom" />
+        <Border Grid.Row="1" Background="DarkGray"   Margin="543,4,10,579" HorizontalAlignment="Right" />
 
-        <Button x:Name="ButtonNew" Height="30" Content="Novo" Grid.Row="1" VerticalAlignment="Bottom" HorizontalAlignment="Left" Width="200" FontSize="20" Margin="10,0,0,0" Background="Lavender" Click="ButtonNew_Click"/>
-        <Button x:Name="ButtonSave" Height="30" Content="Salvar" Grid.Row="1" VerticalAlignment="Bottom" HorizontalAlignment="Center" Width="200" FontSize="20" Background="Lavender" Click="ButtonSave_Click" Margin="0,634,0,0"/>
-        <Button x:Name="ButtonDelete" Height="30" Content="Deletar" Grid.Row="1" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="200" Margin="590,0,10,0" FontSize="20" Background="Lavender" Click="ButtonDelete_Click"/>
+        <Button x:Name="ButtonNew" Height="30" Content="Novo" Grid.Row="1" VerticalAlignment="Bottom"  Width="200" FontSize="20" Margin="427,0,173,713" Background="Gray"  Click="ButtonNew_Click" HorizontalAlignment="Right"/>
+        <Button x:Name="ButtonSave" Height="30" Content="Salvar" Grid.Row="1" VerticalAlignment="Top"   Width="200" FontSize="20" Background="Gray" Click="ButtonSave_Click" Margin="427,47,173,0" HorizontalAlignment="Right"/>
+        <Button x:Name="ButtonDelete" Height="30" Content="Deletar" Grid.Row="1" VerticalAlignment="Bottom" Margin="427,0,173,640" Width="200" FontSize="20" Background="Gray" Click="ButtonDelete_Click" HorizontalAlignment="Right"/>
         <Label x:Name="LabelNumberOfLawyers" Content="" FontSize="15" FontWeight="Bold" Margin="790,621,0,123" Height="30" Grid.Row="1" RenderTransformOrigin="0.65,0.46" />
     </Grid>
 </Page>
