--- a/Advocacy.Software.Pages/PageRegisterLawyer.xaml
+++ b/Advocacy.Software.Pages/PageRegisterLawyer.xaml
@@ -23,16 +23,12 @@
         <TextBox x:Name="TextBoxOabNumber" TextWrapping="Wrap" Height="25" FontSize="15" Margin="223,71,378,0" Grid.Row="1" VerticalAlignment="Top"/>
         <Label Content="UF da OAB: " FontSize="15" Margin="12,99,582,0" Height="30" Grid.Row="1" VerticalAlignment="Top"/>
         <ComboBox x:Name="ComboBoxUfOab" Grid.Row="1" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="223,102,0,0" Height="25" FontSize="15" Width="199" ></ComboBox>
-        <Label Content="UF: " FontSize="15" Margin="12,129,582,0" Height="30" Grid.Row="1" VerticalAlignment="Top"/>
-        <ComboBox x:Name="ComboBoxUf" Grid.Row="1" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="223,132,0,0" FontSize="15" Height="25" Width="199" SelectionChanged="ComboBoxUf_SelectionChanged"/>
-        <Label Content="Cidade: " FontSize="15" Margin="10,160,708,0" Height="30" Grid.Row="1" VerticalAlignment="Top"/>
-        <ComboBox x:Name="ComboBoxCities" Grid.Row="1" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="223,162,0,0" FontSize="15" Height="25" Width="199" />
-        <Label Content="Data de cadastro: " FontSize="15" Margin="10,190,584,0" Height="30" Grid.Row="1" VerticalAlignment="Top"/>
-        <TextBox x:Name="TextBoxRegisterDate" IsReadOnly="True" TextWrapping="Wrap" Height="26" FontSize="15" Margin="223,192,378,0" Grid.Row="1" VerticalAlignment="Top"/>
-        <Label Content="Última atualização: " FontSize="15" Margin="10,219,584,0" Height="30" Grid.Row="1" VerticalAlignment="Top"/>
-        <TextBox x:Name="TextBoxLastUpdate" IsReadOnly="True" TextWrapping="Wrap" Height="26" FontSize="15" Margin="223,223,378,0" Grid.Row="1" VerticalAlignment="Top"/>
-        <Label Content="Número de registro: " FontSize="15" Margin="12,249,582,0" Height="30" Grid.Row="1" VerticalAlignment="Top"/>
-        <TextBox x:Name="TextBoxGuidId" IsReadOnly="True" TextWrapping="Wrap" Height="26" FontSize="15" Margin="223,254,378,0" Grid.Row="1" VerticalAlignment="Top"/>
+        <Label Content="Data de cadastro: " FontSize="15" Margin="12,128,582,0" Height="30" Grid.Row="1" VerticalAlignment="Top"/>
+        <TextBox x:Name="TextBoxRegisterDate" IsReadOnly="True" TextWrapping="Wrap" Height="26" FontSize="15" Margin="223,132,378,0" Grid.Row="1" VerticalAlignment="Top"/>
+        <Label Content="Última atualização: " FontSize="15" Margin="12,161,582,0" Height="30" Grid.Row="1" VerticalAlignment="Top"/>
+        <TextBox x:Name="TextBoxLastUpdate" IsReadOnly="True" TextWrapping="Wrap" Height="26" FontSize="15" Margin="223,163,378,0" Grid.Row="1" VerticalAlignment="Top"/>
+        <Label Content="Número de registro: " FontSize="15" Margin="12,192,582,0" Height="30" Grid.Row="1" VerticalAlignment="Top"/>
+        <TextBox x:Name="TextBoxGuidId" IsReadOnly="True" TextWrapping="Wrap" Height="26" FontSize="15" Margin="223,192,378,0" Grid.Row="1" VerticalAlignment="Top"/>
 
         <Border Grid.Row="1" Background="DarkGray"   Margin="543,4,10,579" HorizontalAlignment="Right" />
 
@@ -40,5 +36,8 @@
         <Button x:Name="ButtonSave" Height="30" Content="Salvar" Grid.Row="1" VerticalAlignment="Top"   Width="200" FontSize="20" Background="Gray" Click="ButtonSave_Click" Margin="427,47,173,0" HorizontalAlignment="Right"/>
         <Button x:Name="ButtonDelete" Height="30" Content="Deletar" Grid.Row="1" VerticalAlignment="Bottom" Margin="427,0,173,640" Width="200" FontSize="20" Background="Gray" Click="ButtonDelete_Click" HorizontalAlignment="Right"/>
         <Label x:Name="LabelNumberOfLawyers" Content="" FontSize="15" FontWeight="Bold" Margin="790,621,0,123" Height="30" Grid.Row="1" RenderTransformOrigin="0.65,0.46" />
+        <Label Content="Selecione um(a) advogado(a) da lista para exibir os dados no formulário: " FontSize="15" Margin="11,227,274,0" Height="32" Grid.Row="1" VerticalAlignment="Top"/>
+        <ComboBox x:Name="ComboBoxLawyers" Grid.Row="1" VerticalAlignment="Top" HorizontalAlignment="Center" FontSize="15" Height="26" Width="778" SelectionChanged="ComboBoxLawyers_SelectionChanged" Margin="0,264,0,0"/>
+        <Label x:Name="LabelNumberOfRows" Content="" FontSize="15" Margin="11,295,274,0" Height="32" Grid.Row="1" VerticalAlignment="Top"/>
     </Grid>
 </Page>
