--- a/Advocacy.Software.Pages/PageRegisterLawyer.xaml
+++ b/Advocacy.Software.Pages/PageRegisterLawyer.xaml
@@ -37,7 +37,7 @@
         <Button x:Name="ButtonDelete" Height="30" Content="Deletar" Grid.Row="1" VerticalAlignment="Bottom" Margin="427,0,173,640" Width="200" FontSize="20" Background="Gray" Click="ButtonDelete_Click" HorizontalAlignment="Right"/>
         <Label x:Name="LabelNumberOfLawyers" Content="" FontSize="15" FontWeight="Bold" Margin="790,621,0,123" Height="30" Grid.Row="1" RenderTransformOrigin="0.65,0.46" />
         <Label Content="Selecione um(a) advogado(a) da lista para exibir os dados no formulário: " FontSize="15" Margin="11,227,274,0" Height="32" Grid.Row="1" VerticalAlignment="Top"/>
-        <ComboBox x:Name="ComboBoxLawyers" Grid.Row="1" VerticalAlignment="Top" HorizontalAlignment="Center" FontSize="15" Height="26" Width="778" SelectionChanged="ComboBoxLawyers_SelectionChanged" Margin="0,264,0,0"/>
-        <Label x:Name="LabelNumberOfRows" Content="" FontSize="15" Margin="11,295,274,0" Height="32" Grid.Row="1" VerticalAlignment="Top"/>
+        <ComboBox x:Name="ComboBoxLawyers" Grid.Row="1" VerticalAlignment="Top" HorizontalAlignment="Left"  FontSize="15" Height="26" Width="766" SelectionChanged="ComboBoxLawyers_SelectionChanged" Margin="12,264,0,0"/>
+
     </Grid>
 </Page>
