--- a/Advocacy.Software.Pages/PageGenerateAttorney.xaml
+++ b/Advocacy.Software.Pages/PageGenerateAttorney.xaml
@@ -24,8 +24,9 @@
         <TextBox x:Name="TextBoxSpecificPowers" Grid.Row="1" TextWrapping="Wrap" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="25" Width="588" Margin="10,213,0,0"/>
 
 
-        <Button Grid.Row="1" x:Name="ButtonGenerateAttorney" Content="Gerar Procuração" FontSize="35" VerticalAlignment="Top" HorizontalAlignment="Left" Width="588" Background="DarkGray" Click="ButtonGenerateAttorney_Click" Margin="10,318,0,0"/>
+        <Button Grid.Row="1" x:Name="ButtonGenerateAttorney" Content="Gerar Procuração" FontSize="35" VerticalAlignment="Top" HorizontalAlignment="Left" Width="588" Background="DarkGray" Click="ButtonGenerateAttorney_Click" Margin="10,365,0,0"/>
         <ComboBox x:Name="ComboBoxLawyers" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Top"  FontSize="25" Height="39" Width="588" SelectionChanged="ComboBoxLawyers_SelectionChanged" Margin="10,126,0,0"/>
-        <Button Grid.Row="1" x:Name="ButtonAddLawyers" Content="Adicionar advogado na procuração" FontSize="35" VerticalAlignment="Top" HorizontalAlignment="Left" Width="588" Background="DarkGray" Click="ButtonAddLawyers_Click" Margin="10,262,0,0"/>
+        <Label Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="25" Margin="10,259,0,0" Content="Digite a cidade onde o escritório está localizado:"/>
+        <TextBox x:Name="TextBoxcity" Grid.Row="1" TextWrapping="Wrap" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="25" Width="588" Margin="10,302,0,0"/>
     </Grid>
 </Page>
