--- a/Advocacy.Software.Pages/PageGenerateFeesContract.xaml
+++ b/Advocacy.Software.Pages/PageGenerateFeesContract.xaml
@@ -35,12 +35,12 @@
 
         <Label Content="Selecione uma conta bancária:" FontSize="15" Margin="9,192,496,0" Height="30" Grid.Row="1" VerticalAlignment="Top"/>
         <ComboBox x:Name="ComboBoxBankAccount" TabIndex="5" Grid.Row="1" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="309,195,0,0" FontSize="15" Height="25" Width="300"/>
-        <Label Content="Selecione um estado:" FontSize="15" Margin="9,284,496,0" Height="30" Grid.Row="1" VerticalAlignment="Top"/>
+        <Label Content="UF onde fica seu escritório:" FontSize="15" Margin="9,284,496,0" Height="30" Grid.Row="1" VerticalAlignment="Top"/>
         <ComboBox x:Name="ComboBoxStates" TabIndex="8" Grid.Row="1" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="309,287,0,0" FontSize="15" Height="25" Width="300" SelectionChanged="ComboBoxStates_SelectionChanged"/>
-        <Label Content="Selecione uma cidade:" FontSize="15" Margin="9,314,496,0" Height="30" Grid.Row="1" VerticalAlignment="Top"/>
-        <ComboBox x:Name="ComboBoxCities" TabIndex="9" Grid.Row="1" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="309,317,0,0" FontSize="15" Height="25" Width="300"/>
+        <Label Content="Cidade onde fica seu escritório:" FontSize="15" Margin="9,314,496,0" Height="30" Grid.Row="1" VerticalAlignment="Top"/>
+        <ComboBox x:Name="ComboBoxCities" TabIndex="9" Grid.Row="1" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="309,317,0,0" FontSize="15" Height="25" Width="300" SelectionChanged="ComboBoxCities_SelectionChanged"/>
         <Button x:Name="ButtonGenerateFeesContract" Content="Gerar contrato de honorários" VerticalAlignment="Top" HorizontalAlignment="Center" Grid.Row="1" FontSize="30" Background="DarkGray" Margin="0,397,0,0" Width="500" Click="ButtonGenerateFeesContract_Click"/>
-        <TextBox x:Name="TextBoxLawyer" TextWrapping="Wrap" Height="26" FontSize="15" Grid.Row="1" VerticalAlignment="Top" HorizontalAlignment="Left" Width="300" Margin="309,42,0,0"/>
+        <ComboBox x:Name="ComboBoxLawyers" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Top"  FontSize="15" Height="28" Width="300" SelectionChanged="ComboBoxLawyers_SelectionChanged" Margin="309,41,0,0"/>
 
 
     </Grid>
