--- a/Advocacy.Software.Pages/PageGenerateHipossuficiencyContract.xaml
+++ b/Advocacy.Software.Pages/PageGenerateHipossuficiencyContract.xaml
@@ -17,12 +17,12 @@
         <Border Background="Black" BorderBrush="Black" BorderThickness="1">
             <Label Foreground="Lavender"  Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="25" FontWeight="Bold">Contrato de hipossuficiência</Label>
         </Border>
-        <Label Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="25">Digite o CPF ou CNPJ do cliente:</Label>
-        <Label Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="25" Margin="0,95,0,0">Selecione um advogado da lista:</Label>
-        <TextBox x:Name="TextBoxCpfOrCnpj" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="25" Width="390" Margin="370,8,40,0"/>
+        <Label Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="25" Margin="10,0,0,0">Digite o CPF ou CNPJ do cliente:</Label>
+        <TextBox x:Name="TextBoxCpfOrCnpj" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Top" HorizontalAlignment="Left" FontSize="25" Width="390" Margin="10,48,400,0"/>
 
 
-        <Button Grid.Row="1" x:Name="ButtonGenerateHipossuficiencyContract" Content="Gerar contrato de hipossuficiência" FontSize="35" VerticalAlignment="Top" HorizontalAlignment="Center" Width="600" Background="DarkGray" Margin="0,209,0,0" Click="ButtonGenerateHipossuficiencyContract_Click"/>
-        <TextBox x:Name="TextBoxLawyer" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="25" Width="390" Margin="371,103,39,0" IsReadOnly="True"/>
+        <Button Grid.Row="1" x:Name="ButtonGenerateHipossuficiencyContract" Content="Gerar contrato" FontSize="35" VerticalAlignment="Top" HorizontalAlignment="Left" Width="390" Background="DarkGray" Margin="11,199,0,0" Click="ButtonGenerateHipossuficiencyContract_Click"/>
+        <Label Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="25" Margin="11,92,0,0" Content="Cidade do seu escritório:"/>
+        <TextBox x:Name="TextBoxCity" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Top" HorizontalAlignment="Left" FontSize="25" Width="390" Margin="10,140,0,0"/>
     </Grid>
 </Page>
